# v3-license-parser

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
