[package]
name = "v3_license_parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Symless Ltd."]
readme = "README.md"
repository = "https://github.com/symless/license-parser"
homepage = "https://github.com/symless/license-parser"

[dependencies]
bincode = "1.3.3"
bitflags = "1.3.2"
byteorder = { version = "1.4.3", features = ["std"] }
data-encoding = "2.3.2"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
thiserror = "1.0.31"

[dev-dependencies]
pkcs8 = { version = "0.8.0", features = ["std"] }
ed25519 = { version = "1.4.1", features = ["pkcs8", "alloc", "pem"] }
lazy_static = "1.4.0"
